--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.13",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "alpinejs": "^3.15.0",
+        "sweetalert2": "^11.24.0"
     }
 }
