--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.15.0",
-        "sweetalert2": "^11.24.0"
+        "sweetalert2": "^11.24.0",
+        "trix": "^2.1.15"
     }
 }
