--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.9"
 
 services:
-  app:
+  hmt_app:
     build:
       context: .
       dockerfile: Dockerfile
     image: laravel-app:latest
-    container_name: laravel_app
+    container_name: hmt_app
     restart: always
     depends_on:
       - mysql
@@ -35,7 +35,7 @@ services:
       - .:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - app
+      - hmt_app
     networks:
       - laravel_net
 
