--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,8 @@ services:
     ports:
       - "8800:80"
     volumes:
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    - ./public:/var/www/html/public:ro
     depends_on:
       - hmt_app
     networks:
