--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   hmt_app:
     build:
@@ -20,6 +18,8 @@ services:
       DB_DATABASE: laravel
       DB_USERNAME: laravel
       DB_PASSWORD: secret
+    volumes:
+      - app_code:/var/www/html
     networks:
       - laravel_net
 
@@ -29,11 +29,11 @@ services:
     restart: always
     ports:
       - "8800:80"
-    volumes:
-    - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    - ./public:/var/www/html/public:ro
     depends_on:
       - hmt_app
+    volumes:
+      - app_code:/var/www/html:ro
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - laravel_net
 
@@ -55,6 +55,7 @@ services:
 
 volumes:
   db_data:
+  app_code:
 
 networks:
   laravel_net:
