--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       DB_USERNAME: laravel
       DB_PASSWORD: secret
     volumes:
-      - .:/var/www/html
+      - app_code:/var/www/html
     networks:
       - laravel_net
 
