--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
       DB_USERNAME: laravel
       DB_PASSWORD: secret
     volumes:
-      - app_code:/var/www/html
+      - ./storage:/var/www/html/storage
+      - ./bootstrap/cache:/var/www/html/bootstrap/cache
     networks:
       - laravel_net
 
@@ -32,7 +33,6 @@ services:
     depends_on:
       - hmt_app
     volumes:
-      - app_code:/var/www/html:ro
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - laravel_net
