--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       DB_USERNAME: laravel
       DB_PASSWORD: secret
     volumes:
+      - app_code:/var/www/html        # share volume berisi app code
       - ./storage:/var/www/html/storage
       - ./bootstrap/cache:/var/www/html/bootstrap/cache
     networks:
@@ -33,7 +34,7 @@ services:
     depends_on:
       - hmt_app
     volumes:
-      - ./:/var/www/html
+      - app_code:/var/www/html:ro     # mount volume yang sama (read-only)
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - laravel_net
