--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - hmt_app
     volumes:
       - app_code:/var/www/html:ro     # mount volume yang sama (read-only)
+      - ./storage:/var/www/html/storage
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - laravel_net
